<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseTime"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="50dp"
        android:id="@+id/textview"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:hint="@string/date"
            android:textSize="18dp"
            android:fontFamily="@font/baloo"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/date_edit_text"/>

    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#D2FFFFFF"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#FDFFFFFF"
        android:shadowRadius="8"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="center"
        android:maxLength="100"
        android:layout_marginTop="20dp"
        android:scrollHorizontally="false"
        android:padding="20dp"
        android:fontFamily="@font/baloo"
        android:textSize="16dp"
        android:hint="@string/type_here"
        android:background="@drawable/layout_background_custom"
        android:id="@+id/notes_edit_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_btn"
        android:padding="16dp"
        android:background="@drawable/button_state_background"
        android:textColor="@drawable/button_state_txt_color"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo"
        android:textSize="18dp"
        android:shadowColor="#FDFFFFFF"
        android:shadowRadius="8"
        android:id="@+id/continue_btn"/>

</LinearLayout>