<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_details"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="25dp"
        android:fontFamily="@font/baloo"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:background="@drawable/layout_background_custom">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:id="@+id/details_text_view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#D2FFFFFF"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/email_us_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/email_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:shadowColor="#FDFFFFFF"
                android:shadowRadius="8"
                android:text="@string/email_us"
                android:fontFamily="@font/baloo"
                android:textAllCaps="false"
                android:textColor="@drawable/button_state_txt_color_red"
                android:textSize="15dp"
                android:id="@+id/email_us_tv"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">

            <ImageButton
                android:id="@+id/calendar_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/calendar_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:shadowColor="#FDFFFFFF"
                android:shadowRadius="8"
                android:text="@string/set_calendar"
                android:textAllCaps="false"
                android:textColor="@drawable/button_state_txt_color_red"
                android:fontFamily="@font/baloo"
                android:textSize="15dp"
                android:id="@+id/calendar_tv"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">


            <ImageButton
                android:id="@+id/alarm_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/clock_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:shadowColor="#FDFFFFFF"
                android:shadowRadius="8"
                android:text="@string/set_alarm"
                android:textAllCaps="false"
                android:textColor="@drawable/button_state_txt_color_red"
                android:fontFamily="@font/baloo"
                android:textSize="15dp"
               android:id="@+id/alarm_tv"/>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/finish"
        android:textSize="22dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:shadowColor="#FDFFFFFF"
        android:shadowRadius="8"
        android:fontFamily="@font/baloo"
        android:background="@drawable/button_state_background"
        android:textColor="@drawable/button_state_txt_color"
        android:layout_marginTop="50dp"
        android:id="@+id/finish_btn"/>

</LinearLayout>