<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:id="@+id/relativeLayout">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dog_description"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#D2FFFFFF"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/camera_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/camera_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/baloo"
                android:text="@string/picture"
                android:textAllCaps="false"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@drawable/button_state_txt_color_red"
                android:id="@+id/photo_tv"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/video_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/video_camera_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/baloo"
            android:text="@string/video"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textColor="@drawable/button_state_txt_color_red"
            android:layout_marginTop="10dp"
            android:id="@+id/video_tv"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_result_photo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#D2FFFFFF"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:padding="10dp"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:shadowColor="#FDFFFFFF"
            android:shadowRadius="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="#D2FFFFFF"
        android:visibility="invisible"
        android:id="@+id/activity_result_video_layout">

        <VideoView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:id="@+id/result_video"
            android:visibility="invisible"
            android:shadowColor="#FDFFFFFF"
            android:shadowRadius="10" />

        <Button
            android:layout_width="80px"
            android:layout_height="80px"
            android:background="@drawable/play_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:shadowColor="#FD000000"
            android:shadowRadius="8"
            android:id="@+id/play_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_video"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/baloo"
            android:shadowColor="#FDFFFFFF"
            android:shadowRadius="8"
            android:textSize="15dp"
            android:visibility="invisible"
            android:layout_marginLeft="8dp"
            android:id="@+id/text_play_video"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/continue_btn"
        android:padding="12dp"
        android:shadowColor="#FDFFFFFF"
        android:shadowRadius="8"
        android:textSize="18dp"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_state_background"
        android:textColor="@drawable/button_state_txt_color"
        android:id="@+id/continue_btn"/>

</LinearLayout>